--- a/blog/templates/blog/blog_post.html
+++ b/blog/templates/blog/blog_post.html
@@ -7,7 +7,7 @@
       {{ post.content }}
     </p>
     <p>
-      {{ post.published_date|date:'SHORT_DATE_FORMAT' }}
+      {{ post.published_date|date:'d M, Y' }}
     </p>
   </div>
 {% endblock %}
